# Log4Qt

./: .gitignore  CLAUDE.md  CMAKE_MODERNIZATION_SUMMARY.md  CMakeLists.txt  COMMITS_SUMMARY.md  COMMIT_MESSAGE.md  ChangeLog.md  Configuration.md  OPTIMIZATION_COMPLETE.md  PATCHES_APPLIED_SUMMARY.md  PERFORMANCE_ANALYSIS_SUMMARY.md  PERFORMANCE_IMPLEMENTATION_ROADMAP.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_INDEX.md  PERFORMANCE_MASTER_INDEX.md  PERFORMANCE_QUICK_START.md  PERFORMANCE_README.md  PERFORMANCE_TEST_SUMMARY.md  QSTRING_BENCHMARK_RESULTS.md  QSTRING_OPTIMIZATION_SUMMARY.md  Readme.md  TIMESTAMP_OPTIMIZATION_ANALYSIS.md  TIMESTAMP_OPTIMIZATION_COMPLETE.md  TIMESTAMP_OPTIMIZATION_RESULTS.md  appveyor.yml  json_output.txt  log4qt.pro  proptest_output.txt  test_append.cpp  test_output.txt  xml_output.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: cmake-macos.yml  cmake-ubuntu.yml  cmake-windows.yml
cmake/: Log4QtConfig.cmake.in  MacroEnsureOutOfSourceBuild.cmake  cmake_uninstall.cmake.in
examples/basic/: loggerobject.cpp  loggerobject.h  loggerobjectprio.cpp  loggerstatic.cpp  main.cpp
examples/propertyconfigurator/: loggerobject.cpp  loggerobject.h  loggerobjectprio.cpp  loggerobjectprio.h  loggerstatic.cpp  loggerstatic.h  main.cpp  propertyconfigurator.exe.log4qt.properties
src/log4qt/: CMakeLists.txt  abstractlayout.cpp  abstractlayout.h  abstractstringlayout.cpp  abstractstringlayout.h  appender.cpp  appender.h  appenderskeleton.cpp  appenderskeleton.h  asyncappender.cpp  asyncappender.h  basicconfigurator.cpp  basicconfigurator.h  binaryfileappender.cpp  binaryfileappender.h  binarylayout.cpp  binarylayout.h  binarylogger.cpp  binarylogger.h  binaryloggingevent.cpp  binaryloggingevent.h  binarylogstream.cpp  binarylogstream.h  binarytotextlayout.cpp  binarytotextlayout.h  binarywriterappender.cpp  binarywriterappender.h  colorconsoleappender.cpp  colorconsoleappender.h  consoleappender.cpp  consoleappender.h  dailyfileappender.cpp  dailyfileappender.h  dailyrollingfileappender.cpp  dailyrollingfileappender.h  databaseappender.cpp  databaseappender.h  databaselayout.cpp  databaselayout.h  fileappender.cpp  (+63 more)
src/log4qt/helpers/: appenderattachable.cpp  appenderattachable.h  asyncworker.cpp  asyncworker.h  binaryclasslogger.cpp  binaryclasslogger.h  boundedblockingqueue.h  classlogger.cpp  classlogger.h  configuratorhelper.cpp  configuratorhelper.h  cronexpression.cpp  cronexpression.h  datetime.cpp  datetime.h  dispatcher.cpp  dispatcher.h  factory.cpp  factory.h  initialisationhelper.cpp  initialisationhelper.h  logerror.cpp  logerror.h  optionconverter.cpp  optionconverter.h  patternformatter.cpp  patternformatter.h  properties.cpp  properties.h  timestampprovider.cpp  timestampprovider.h
src/log4qt/spi/: compositetriggeringpolicy.cpp  compositetriggeringpolicy.h  crontriggeringpolicy.cpp  crontriggeringpolicy.h  daterolloverstrategy.cpp  daterolloverstrategy.h  defaultrolloverstrategy.cpp  defaultrolloverstrategy.h  filter.cpp  filter.h  headerfooterprovider.cpp  headerfooterprovider.h  onstartuptriggeringpolicy.cpp  onstartuptriggeringpolicy.h  rolloverstrategy.cpp  rolloverstrategy.h  sizebasedtriggeringpolicy.cpp  sizebasedtriggeringpolicy.h  timebasedtriggeringpolicy.cpp  timebasedtriggeringpolicy.h  triggeringpolicy.cpp  triggeringpolicy.h
src/log4qt/varia/: binaryeventfilter.cpp  binaryeventfilter.h  debugappender.cpp  debugappender.h  denyallfilter.cpp  denyallfilter.h  levelmatchfilter.cpp  levelmatchfilter.h  levelrangefilter.cpp  levelrangefilter.h  listappender.cpp  listappender.h  nullappender.cpp  nullappender.h  stringmatchfilter.cpp  stringmatchfilter.h
tests/: CMakeLists.txt
tests/asyncappendertest/: CMakeLists.txt  tst_asyncappender.cpp
tests/binaryloggertest/: logging.cpp
tests/dailyfileappendertest/: dailyfileappendertest.cpp
tests/dailyrollingfileappendertest/: CMakeLists.txt  dailyrollingfileappendertest.cpp
tests/filewatcher/: CMakeLists.txt
tests/headerfootertest/: CMakeLists.txt  tst_headerfooter.cpp
tests/jsonlayouttest/: CMakeLists.txt  tst_jsonlayout.cpp
tests/jsontest/: CMakeLists.txt  tst_jsonconfigurator.cpp
tests/log4qttest/: CMakeLists.txt  log4qttest.cpp  log4qttest.h
tests/performancetest/: CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README.md  performancetest.cpp  performancetest.h  performancetest.pro  qstring_benchmark.cpp  qstring_benchmark.h  qstring_benchmark_CMakeLists.txt
tests/policytest/: CMakeLists.txt  tst_policytest.cpp
tests/propertytest/: CMakeLists.txt  tst_propertyconfigurator.cpp
tests/xmltest/: CMakeLists.txt  tst_xmlconfigurator.cpp
