add_subdirectory(asyncappendertest)
add_subdirectory(jsonlayouttest)
add_subdirectory(dailyrollingfileappendertest)
add_subdirectory(jsontest)
add_subdirectory(log4qttest)
add_subdirectory(filewatcher)
add_subdirectory(performancetest)
add_subdirectory(policytest)
add_subdirectory(propertytest)
add_subdirectory(xmltest)
