find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Test REQUIRED)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_executable(tst_headerfootertest tst_headerfooter.cpp)
target_link_libraries(tst_headerfootertest log4qt Qt${QT_VERSION_MAJOR}::Test)

add_test(NAME tst_headerfootertest COMMAND $<TARGET_FILE:tst_headerfootertest>)
